--- a/code/solutions/lane_detection/lane_segmentation.ipynb
+++ b/code/solutions/lane_detection/lane_segmentation.ipynb
@@ -74,8 +74,7 @@
    "outputs": [],
    "source": [
     "if colab_nb:\n",
-    "    !pip install fastseg",
-    "    !pip install fastai --upgrade\n"
+    "    !pip install fastseg    !pip install fastai --upgrade\n"
    ]
   },
   {
@@ -1008,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c3428b09",
    "metadata": {
     "papermill": {
@@ -1020,6 +1019,28 @@
     },
     "tags": []
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   3     2\n",
+      "1 x + 1 x + 2 x + 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "coeffs = np.array([1.,1.,2.,5.])\n",
+    "a=np.poly1d(coeffs)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "914c2004",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -1040,7 +1061,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.8.16"
   },
   "papermill": {
    "default_parameters": {},
